--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.33",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
